kubernetes/otel/sidecar-test/jaeger/product.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
  namespace: wsi
  labels:
    app: product
spec:
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
      annotations:
        # sidecar.opentelemetry.io/inject: "true"
        instrumentation.opentelemetry.io/inject-go: "true"
        instrumentation.opentelemetry.io/otel-go-auto-target-exe: /app/main
        # instrumentation.opentelemetry.io/go-container-names: product
    spec:
      nodeSelector:
        dedicated: app
      tolerations:
        - key: dedicated
          value: app
          effect: NoSchedule
      containers:
        - name: product
          image: 658986583341.dkr.ecr.ap-northeast-2.amazonaws.com/product
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 8080
              name: product
          securityContext:
            privileged: true
            runAsUser: 0
---
apiVersion: v1
kind: Service
metadata:
  name: product
  namespace: wsi
spec:
  selector:
    app: product
  ports:
    - name: product
      protocol: TCP
      port: 8080
      targetPort: 8080
